[gd_scene load_steps=2 format=3 uid="uid://baqln10wyuvjv"]

[ext_resource type="Script" path="res://scripts/wait_for.gd" id="1_48t1g"]

[node name="WaitFor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48t1g")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopVBox" type="VBoxContainer" parent="TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="TopPanel/TopVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "Waitig for"
horizontal_alignment = 1
vertical_alignment = 2

[node name="IdlingLabel" type="Label" parent="TopPanel/TopVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "..."
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="TopPanel/TopVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "Cancel"

[node name="IdlingTimer" type="Timer" parent="."]

[connection signal="pressed" from="TopPanel/TopVBox/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="timeout" from="IdlingTimer" to="." method="_on_idling_timer_timeout"]
